I have powered through for 1st edition

--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -231,7 +231,7 @@
   "book.forgero.guidebook.schematics.disassembly_station.text2": "To use it you put in a [#](000CFF)tool[#]() on the left side. On the right side it will show what you get back.\n\\\n\\\n[#](FF0000)*Keep in mind that not all the materials are given back.*[#]()\n",
   "book.forgero.guidebook.schematics.schematic_variants.name": "Different Schematics",
   "book.forgero.guidebook.schematics.schematic_variants.description": "But wait, there's more",
-  "book.forgero.guidebook.schematics.schematic_variants.text": "The [#](78FF00)base schematics[#]() that you can craft yourself replicate minecraft's vanilla tools.\n\\\n\\\nAs the name suggest [#](78FF00)base schematics[#]() don't give your tools more stats or more slots\n",
+  "book.forgero.guidebook.schematics.schematic_variants.text": "The [#](78FF00)base schematics[#]() that you can craft yourself replicate minecraft's vanilla tools.\n\\\n\\\nAs the name suggest [#](78FF00)base schematics[#]() don't give your tools more stats or more [#](FF00C5)slots[#]()\n",
   "book.forgero.guidebook.schematics.schematic_variants.title": "Base Schematics",
   "book.forgero.guidebook.schematics.schematic_variants.text1": "There are more [#](78FF00)schematics[#]() than just the base one. Higher tier [#](78FF00)schematics[#]() have stat boosts or special abilities like vein mining. These [#](78FF00)schematics[#]() cannot be crafted.",
   "book.forgero.guidebook.schematics.schematic_variants.title1": "There Are More",
@@ -250,64 +250,79 @@
   "book.forgero.guidebook.schematics.mastercrafted_schematics.name": "Mastercrafted Schematics",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.description": "Even Better Better Tools!",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.title": "Mastercrafted Schematics",
-  "book.forgero.guidebook.schematics.mastercrafted_schematics.text": "[#](78FF00)Mastercrafted schematics[#]() are a upgrade over the normal and refined [#](78FF00)schematics[#](). Just like the refined ones these are a straight up stat boost, but also feature more slots.",
+  "book.forgero.guidebook.schematics.mastercrafted_schematics.text": "[#](78FF00)Mastercrafted schematics[#]() are a upgrade over the normal and refined [#](78FF00)schematics[#](). Just like the refined ones these are a straight up stat boost, but also feature more [#](FF00C5)slots[#]().",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.title1": "Good luck searching",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.text1": "Just like all the other [#](78FF00)schematics[#]() you can find these by exploring the world. These [#](78FF00)schematics[#]() are the most rare of them all. Some blacksmiths never even see these in their lifetime.",
   "book.forgero.guidebook.schematics.shortcut.name": "Customization is key",
   "book.forgero.guidebook.schematics.shortcut.description": "Finally I can dye my tools pink!",
-  "book.forgero.guidebook.category.upgrading.name": "Upgrading",
-  "book.forgero.guidebook.upgrading.upgrade_station.name": "Taking Your Tools To The Next Level",
-  "book.forgero.guidebook.upgrading.upgrade_station.description": "The Basics On The Upgrade Station!",
-  "book.forgero.guidebook.upgrading.upgrade_station.text": "",
-  "book.forgero.guidebook.upgrading.upgrade_station.title": "",
+  "book.forgero.guidebook.category.upgrading.name": "Customization & Upgrades",
+  "book.forgero.guidebook.upgrading.upgrade_station.name": "From Pickaxe To Powerhouse",
+  "book.forgero.guidebook.upgrading.upgrade_station.description": "The Upgrade Station and you",
+  "book.forgero.guidebook.upgrading.upgrade_station.text": "Customizing your tool is all done with the [#](7C00FF)Upgrade Station[#](). The [#](7C00FF)Upgrade Station[#]() allows you to hotswap materials and certain parts in and out of your [#](000CFF)tools[#]().",
+  "book.forgero.guidebook.upgrading.upgrade_station.title": "Upgrade Station",
+  "book.forgero.guidebook.upgrading.upgrade_station.text1": "The [#](7C00FF)Upgrade Station[#]() is the only way to acces all the [#](FF00C5)slots[#]() on a [#](000CFF)tool[#](). Thus being necessary if you want to dye or alter your [#](000CFF)tools[#]().",
+  "book.forgero.guidebook.upgrading.upgrade_station.title1": "Slots",
   "book.forgero.guidebook.upgrading.stats.name": "Stats And What They Mean",
   "book.forgero.guidebook.upgrading.stats.description": "A mystery unraveled",
-  "book.forgero.guidebook.upgrading.stats.text": "",
-  "book.forgero.guidebook.upgrading.stats.title": "",
-  "book.forgero.guidebook.upgrading.stats.text1": "",
-  "book.forgero.guidebook.upgrading.stats.title1": "",
+  "book.forgero.guidebook.upgrading.stats.text": "Most stats on tools are straightforward. If you want to min max your [#](000CFF)tools[#]() we suggest watching the tooltip very closely as this gives alot of information.",
+  "book.forgero.guidebook.upgrading.stats.title": "Statistical",
+  "book.forgero.guidebook.upgrading.stats.title1": "The Tooltip",
   "book.forgero.guidebook.upgrading.weight.name": "Weight On Tools And Materials",
-  "book.forgero.guidebook.upgrading.weight.description": "weight description here",
-  "book.forgero.guidebook.upgrading.weight.text": "",
-  "book.forgero.guidebook.upgrading.weight.title": "",
+  "book.forgero.guidebook.upgrading.weight.description": "Featherweight",
+  "book.forgero.guidebook.upgrading.weight.title": "Weight & Attack Speed",
+  "book.forgero.guidebook.upgrading.weight.text": "Weight and Attack speed are a bit of a outlier if you look at the stats. As base every material in Forgero has 2 attack speed, the weight on the material then decides how much there is taken off.",
+  "book.forgero.guidebook.upgrading.weight.title1": "Hunger",
+  "book.forgero.guidebook.upgrading.weight.text1": "Next to attack speed weight also has a impact on your hunger bar. How heavier the tool how more you have to eat to get replenished.",
   "book.forgero.guidebook.upgrading.slots.name": "Tools And Their Slots",
   "book.forgero.guidebook.upgrading.slots.description": "You can always have more",
-  "book.forgero.guidebook.upgrading.slots.text": "",
-  "book.forgero.guidebook.upgrading.slots.title": "",
+  "book.forgero.guidebook.upgrading.slots.text": "[#](000CFF)Tools[#]() have different [#](FF00C5)slots[#](). Which have all their own benefit. Not all materials are viable in every slot. Think about it, would it make sense to add vines to the tip of your sword?",
+  "book.forgero.guidebook.upgrading.slots.title": "Slots on Tools",
+  "book.forgero.guidebook.upgrading.slots.text1": "We categorize the [#](FF00C5)slots[#]() into three main ones.\n\\\n\\\nSo we have Utility, Offensive and Trinket [#](FF00C5)slots[#]().\n",
+  "book.forgero.guidebook.upgrading.slots.title1": "Different Slots",
   "book.forgero.guidebook.upgrading.utility.name": "Utility Slots",
   "book.forgero.guidebook.upgrading.utility.description": "Sneaky upgrades",
-  "book.forgero.guidebook.upgrading.utility.text": "",
-  "book.forgero.guidebook.upgrading.utility.title": "",
+  "book.forgero.guidebook.upgrading.utility.text": "[#](FF00C5)Utility slots[#]() are almost always filled by soft materials. Think of leather, vines, certain mob drops.  ",
+  "book.forgero.guidebook.upgrading.utility.title": "Utility",
+  "book.forgero.guidebook.upgrading.utility.text1": "Next to just upgrades and materials, these [#](FF00C5)slots[#]() could also house a binding or dyes to customize your [#](000CFF)tool[#]().",
+  "book.forgero.guidebook.upgrading.utility.title1": "Other Slots",
   "book.forgero.guidebook.upgrading.binding.name": "Bindings",
   "book.forgero.guidebook.upgrading.binding.description": "Keep your tools together",
-  "book.forgero.guidebook.upgrading.binding.text": "",
-  "book.forgero.guidebook.upgrading.binding.title": "",
+  "book.forgero.guidebook.upgrading.binding.text": "Bindings are parts you add to your [#](000CFF)tool[#]() adding durability, speed and maybe even some trinkets down the line. ",
+  "book.forgero.guidebook.upgrading.binding.title": "Bindings",
+  "book.forgero.guidebook.upgrading.binding.text1": "There are different types of Bindings. Soft bindings are lighter, and made with less durable material while normal bindings are heavy but more durable.",
+  "book.forgero.guidebook.upgrading.binding.title1": "Different Bindings",
   "book.forgero.guidebook.upgrading.grip.name": "Handle Grip",
   "book.forgero.guidebook.upgrading.grip.description": "Get a grip",
-  "book.forgero.guidebook.upgrading.grip.text": "",
-  "book.forgero.guidebook.upgrading.grip.title": "",
+  "book.forgero.guidebook.upgrading.grip.text": "The Handle grip gives a small bit of durability to your [#](000CFF)tool[#](), some materials also gives some mining speed and attack speed when used in this [#](FF00C5)slot[#]()  ",
+  "book.forgero.guidebook.upgrading.grip.title": "Grip",
   "book.forgero.guidebook.upgrading.cosmetic.name": "Dyes",
   "book.forgero.guidebook.upgrading.cosmetic.description": "Make your tool stand out!",
-  "book.forgero.guidebook.upgrading.cosmetic.text": "",
-  "book.forgero.guidebook.upgrading.cosmetic.title": "",
+  "book.forgero.guidebook.upgrading.cosmetic.text": "Dyes don't add any stats and are fully visual. Think of them as a [#](000CFF)tool[#]() skin in other games. Other upgrades on the tool will always override dyes so keep that in mind.",
+  "book.forgero.guidebook.upgrading.cosmetic.title": "Dyes",
   "book.forgero.guidebook.upgrading.trinket.name": "Trinket Slots",
-  "book.forgero.guidebook.upgrading.trinket.description": "trinket description here",
-  "book.forgero.guidebook.upgrading.trinket.text": "",
-  "book.forgero.guidebook.upgrading.trinket.title": "",
+  "book.forgero.guidebook.upgrading.trinket.description": "Trinketology",
+  "book.forgero.guidebook.upgrading.trinket.text": "Trinkets exist (currently) only out of gems and can only be added to bindings and guards.",
+  "book.forgero.guidebook.upgrading.trinket.title": "Trinkets",
   "book.forgero.guidebook.upgrading.gems.name": "Gems",
   "book.forgero.guidebook.upgrading.gems.description": "Not just for decoration",
-  "book.forgero.guidebook.upgrading.gems.text": "",
-  "book.forgero.guidebook.upgrading.gems.title": "",
+  "book.forgero.guidebook.upgrading.gems.text": "Gems add base stats to a [#](000CFF)tool[#](). For every base stat there is one gem that amplifies it. Gems are based on minerals, so for example diamond gem or a lapis lazuli gem.",
+  "book.forgero.guidebook.upgrading.gems.title": "Gems",
+  "book.forgero.guidebook.upgrading.gems.text1": "Gems can be found while mining their respective ore. Upgrading them after also requires unique materials. Gems can be upgraded to level 5. ",
+  "book.forgero.guidebook.upgrading.gems.title1": "Where to find these",
   "book.forgero.guidebook.upgrading.offensive.name": "Offensive Slots",
   "book.forgero.guidebook.upgrading.offensive.description": "Harder, better, faster, stronger",
-  "book.forgero.guidebook.upgrading.offensive.text": "",
-  "book.forgero.guidebook.upgrading.offensive.title": "",
+  "book.forgero.guidebook.upgrading.offensive.text": "Offensive slots add attack damage, high amounts of mining speed or durability. What it actually adds depends on what material you use. Materials that fit here are hard materials like stone and iron.",
+  "book.forgero.guidebook.upgrading.offensive.title": "Offensive slots",
   "book.forgero.guidebook.upgrading.reinforcement.name": "Reinforcements",
   "book.forgero.guidebook.upgrading.reinforcement.description": "Have your tool outlive you",
-  "book.forgero.guidebook.upgrading.reinforcement.text": "",
-  "book.forgero.guidebook.upgrading.reinforcement.title": "",
+  "book.forgero.guidebook.upgrading.reinforcement.text": "Reinforcements are the backbone of a [#](000CFF)tool[#](). Want your wooden [#](000CFF)tool[#]() to mine diamonds? Slap some netherite on that boy.",
+  "book.forgero.guidebook.upgrading.reinforcement.title": "Reinforcements",
+  "book.forgero.guidebook.upgrading.reinforcement.text1": "With the right reinforcement you can add multiple mining levels or alot of mining speed to your very weak [#](000CFF)tool[#](). There isn't one thing the best so try them all! ",
+  "book.forgero.guidebook.upgrading.reinforcement.title1": "What does it add?",
   "book.forgero.guidebook.upgrading.pommel.name": "Pommels",
-  "book.forgero.guidebook.upgrading.pommel.description": "pommel description here",
-  "book.forgero.guidebook.upgrading.pommel.text": "",
-  "book.forgero.guidebook.upgrading.pommel.title": ""
+  "book.forgero.guidebook.upgrading.pommel.description": "Pommeled It!",
+  "book.forgero.guidebook.upgrading.pommel.text": "Just like Bindings, Pommels are a part upgrade adding durability in exchange for weight. ",
+  "book.forgero.guidebook.upgrading.pommel.title": "Pommels",
+  "book.forgero.guidebook.upgrading.back_to_schematics.name": "Did you screw up?",
+  "book.forgero.guidebook.upgrading.back_to_schematics.description": "Surely not right?"
 }
