Removed old advancements Added our new book to advancement on world loading

--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -3,32 +3,14 @@
   "block.forgero.upgrade_station": "Upgrade Station",
   "itemGroup.forgero.forgero": "Forgero",
   "util.forgero.name_separator": " ",
-  "advancements.forgero.root.title": "A world of possibilities",
-  "advancements.forgero.root.description": "Discover the world of Forgero",
-  "advancements.forgero.toolpart.title": "An essential ingredient",
-  "advancements.forgero.toolpart.description": "There are a lot of these",
-  "advancements.forgero.tool.title": "The whole package",
-  "advancements.forgero.tool.description": "Craft a tool!",
-  "advancements.forgero.head.title": "This looks useful",
-  "advancements.forgero.head.description": "Craft your first Tool head",
-  "advancements.forgero.handle.title": "Something to hold on to",
-  "advancements.forgero.handle.description": "Craft your first handle",
-  "advancements.forgero.binding.title": "A sneaky upgrade",
-  "advancements.forgero.binding.description": "Craft your first binding",
-  "advancements.forgero.schematic.title": "I wonder what I could make with this",
+  "advancements.forgero.root.title": "You have entered the world of Forgero",
+  "advancements.forgero.root.description": "Modular Mayhem has started!",
+  "advancements.forgero.tool.title": "Baby steps",
+  "advancements.forgero.tool.description": "That took you long enough!",
+  "advancements.forgero.gem.title": "What is this?",
+  "advancements.forgero.gem.description": "Find you first gem (on accident)",
+  "advancements.forgero.schematic.title": "A very special piece of paper",
   "advancements.forgero.schematic.description": "Find or craft your first schematic",
-  "advancements.forgero.schematic_vein.title": "This sure looks useful",
-  "advancements.forgero.schematic_vein.description": "Find a vein mining schematic",
-  "advancements.forgero.schematic_pattern.title": "Hmm, 3x3?",
-  "advancements.forgero.schematic_pattern.description": "Find a pattern mining schematic",
-  "advancements.forgero.schematic_dense.title": "Thicc",
-  "advancements.forgero.schematic_dense.description": "Find your first dense schematic",
-  "advancements.forgero.gem.title": "Shiny upgrade",
-  "advancements.forgero.gem.description": "Craft your first gem",
-  "advancements.forgero.redstone-gem.title": "Power up!",
-  "advancements.forgero.redstone-gem.description": "Create a redstone gem",
-  "advancements.forgero.secondary.title": "Double layers!",
-  "advancements.forgero.secondary.description": "Opportunities o' plenty",
   "item.forgero.attack_speed": "Attack speed",
   "item.forgero.conditions": "Conditions:",
   "item.forgero.rare": "Rare",
