Added some handlers to items

--- a/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -121,6 +121,14 @@
   "feature.forgero.emissive.description": "Lights up the surrounding area",
   "feature.forgero.golden": "Golden",
   "feature.forgero.golden.description": "Piglins will not attack you",
+  "feature.forgero.knockback": "Knockback",
+  "feature.forgero.knockback.description": "Knockback enemies",
+  "feature.forgero.fire": "Fire",
+  "feature.forgero.fire.description": "Sets enemies on fire",
+  "feature.forgero.poison": "Poison",
+  "feature.forgero.poison.description": "Poisons your enemies",
+  "feature.forgero.slowness": "Slowness",
+  "feature.forgero.slowness.description": "Slows your enemies",
   "entity.flag.sneaking": "Sneaking",
   "entity.flag.on_fire": "On Fire",
   "entity.flag.sprinting": "Sprinting",
