Nature's Spirit materials added.

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -153,5 +153,26 @@
   "item.forgero.sythian": "Sythian",
   "item.forgero.white_mangrove": "White Mangrove",
   "item.forgero.witch_hazel": "Witch Hazel",
-  "item.forgero.zelkova": "Zelkova"
+  "item.forgero.zelkova": "Zelkova",
+  "item.forgero.calcite_shard": "Calcite Shard",
+  "item.forgero.shiitake_mushroom": "Shiitake Mushroom",
+  "item.forgero.helvola_pad": "Helvola Pad",
+  "item.forgero.white_wisteria_vines": "White Wisteria Vines",
+  "item.forgero.blue_wisteria_vines": "Blue Wisteria Vines",
+  "item.forgero.pink_wisteria_vines": "Pink Wisteria Vines",
+  "item.forgero.purple_wisteria_vines": "Purple Wisteria Vines",
+  "item.forgero.willow_vines": "Willow Vines",
+  "item.forgero.travertine": "Travertine",
+  "item.forgero.cobbled_travertine": "Cobbled Travertine",
+  "item.forgero.sugi": "Sugi",
+  "item.forgero.wisteria": "Wisteria",
+  "item.forgero.maple": "Maple",
+  "item.forgero.olive": "Olive",
+  "item.forgero.joshua": "Joshua",
+  "item.forgero.ghaf": "Ghaf",
+  "item.forgero.palo_verde": "Palo Verde",
+  "item.forgero.coconut": "Coconut",
+  "item.forgero.cedar": "Cedar",
+  "item.forgero.larch": "Larch",
+  "item.forgero.saxaul": "Saxaul"
 }
