--- a/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -129,6 +129,14 @@
   "feature.forgero.poison.description": "Poisons your enemies",
   "feature.forgero.slowness": "Slowness",
   "feature.forgero.slowness.description": "Slows your enemies",
+  "feature.forgero.explosive": "Explosive",
+  "feature.forgero.explosive.description": "Boom!",
+  "feature.forgero.levitation": "Levitation",
+  "feature.forgero.levitation.description": "Enemies start floating",
+  "feature.forgero.teleportation": "Teleportation",
+  "feature.forgero.teleportation.description": "Enemies become Enderman",
+  "feature.forgero.slow_falling": "Slow Falling",
+  "feature.forgero.slow_falling.description": "Enemies get slow falling",
   "entity.flag.sneaking": "Sneaking",
   "entity.flag.on_fire": "On Fire",
   "entity.flag.sprinting": "Sprinting",
