--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -158,7 +158,7 @@
   "item.forgero.ender_shard": "Ender Shard",
   "item.forgero.eternal_crystal": "Eternal Crystal",
   "item.forgero.smaragdant_crystal_shard": "Smaragdant Crystal Shard",
-  "item.forgero.sulphur_crystal": "Sulphur Crystal",
+  "item.forgero.sulphur_crystal": "Sulfur Crystal",
   "item.forgero.ender_dust": "Ender Dust",
   "item.forgero.gelatine": "Gelatine",
   "item.forgero.bolux_mushroom": "Bolux Mushroom",
