[Compat]: Naturalist Compat (#937)
Naturalist compat added: 

- Glow Goop
- Cattail Fluff
- Shellstone
- Bearfur
- Snail Shell

---------

Co-authored-by: Sigmund Granaas Sandring <46557903+SigmundGranaas@users.noreply.github.com>

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -154,6 +154,11 @@
   "item.forgero.white_mangrove": "White Mangrove",
   "item.forgero.witch_hazel": "Witch Hazel",
   "item.forgero.zelkova": "Zelkova",
+  "item.forgero.bear_fur": "Bear Fur",
+  "item.forgero.cattail_fluff": "Cattail Fluff",
+  "item.forgero.glow_goop": "Glow Goop",
+  "item.forgero.shellstone": "Shellstone",
+  "item.forgero.snail_shell": "Snail Shell",
   "item.forgero.netherite_gold_ingot": "Netherite-Gold Ingot",
   "item.forgero.netherite_emerald_ingot": "Netherite-Emerald Ingot",
   "item.forgero.netherite_diamond_ingot": "Netherite-Diamond Ingot",
