[Compat]: Ecologics compat (#958)
Ecologics compat
small one
only 5 new materials

---------

Co-authored-by: Apocip0 <apostolciprian1000@gmail.com>
Co-authored-by: Sigmund Granaas Sandring <46557903+SigmundGranaas@users.noreply.github.com>

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -154,6 +154,11 @@
   "item.forgero.white_mangrove": "White Mangrove",
   "item.forgero.witch_hazel": "Witch Hazel",
   "item.forgero.zelkova": "Zelkova",
+  "item.forgero.coconut": "Coconut",
+  "item.forgero.walnut": "Walnut",
+  "item.forgero.azalea": "Azalea",
+  "item.forgero.flowering_azalea": "Flowering Azalea",
+  "item.forgero.seashell": "Seashell",
   "item.forgero.bear_fur": "Bear Fur",
   "item.forgero.cattail_fluff": "Cattail Fluff",
   "item.forgero.glow_goop": "Glow Goop",
