[Compat]: Ad Astra (#975)
Co-authored-by: Sigmund Granaas Sandring <46557903+SigmundGranaas@users.noreply.github.com>

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -154,6 +154,9 @@
   "item.forgero.white_mangrove": "White Mangrove",
   "item.forgero.witch_hazel": "Witch Hazel",
   "item.forgero.zelkova": "Zelkova",
+  "item.forgero.desh": "Desh",
+  "item.forgero.ostrum": "Ostrum",
+  "item.forgero.calorite": "Calorite",
   "item.forgero.aurora_crystal_shards": "Aurora Crystal Shards",
   "item.forgero.ender_shard": "Ender Shard",
   "item.forgero.eternal_crystal": "Eternal Crystal",
