[Compat]: Create compat (#974)
Create compat adds 5 new materials:

    Zinc
    Andesite Alloy
    Brass
    Powdered Obsidian
    Rose Quartz

Co-authored-by: Sigmund Granaas Sandring <46557903+SigmundGranaas@users.noreply.github.com>

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -154,6 +154,18 @@
   "item.forgero.white_mangrove": "White Mangrove",
   "item.forgero.witch_hazel": "Witch Hazel",
   "item.forgero.zelkova": "Zelkova",
+  "item.forgero.polished_rose_quartz": "Polished Rose Quartz",
+  "item.forgero.andesite_alloy": "Andesite Alloy",
+  "item.forgero.zinc": "Zinc",
+  "item.forgero.brass": "Brass",
+  "item.forgero.asurine": "Asurine",
+  "item.forgero.crimsite": "Crimsite",
+  "item.forgero.limestone": "Limestone",
+  "item.forgero.ochrum": "Ochrum",
+  "item.forgero.scorchia": "Scorchia",
+  "item.forgero.scoria": "Scoria",
+  "item.forgero.veridium": "Veridium",
+  "item.forgero.powdered_obsidian": "Powdered Obsidian",
   "item.forgero.desh": "Desh",
   "item.forgero.ostrum": "Ostrum",
   "item.forgero.calorite": "Calorite",
