Updated modonomicon version & Actually added the correct parent for upgrade section

--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -171,7 +171,7 @@
   "book.forgero.guidebook.category.getting_started.name": "Getting started",
   "book.forgero.guidebook.getting_started.intro.name": "World of Forgero",
   "book.forgero.guidebook.getting_started.intro.text": "Hello Future Blacksmith! The world of Forgero is one of exploration, gathering and crafting. Where actually collecting every material is usefull.",
-  "book.forgero.guidebook.getting_started.intro.text1": "The learning curve of Forgero is pretty steep as you don't become a master blacksmith in a day. [#](FF0000)*Please follow this handbook closely and keep it on you at all times.*[#]()",
+  "book.forgero.guidebook.getting_started.intro.text1": "The learning curve of Forgero is pretty steep as you don't become a master blacksmith in a day. \n\\\n\\\n[#](FF0000)*Please follow this handbook closely and keep it on you at all times.*[#]()",
   "book.forgero.guidebook.getting_started.intro.title": "World of Forgero",
   "book.forgero.guidebook.getting_started.intro.title1": "Learning Curve",
   "book.forgero.guidebook.getting_started.crafting_your_first_tool.name": "Crafting Your First Tool!",
@@ -185,7 +185,7 @@
   "book.forgero.guidebook.getting_started.handle.title": "Your First Handle",
   "book.forgero.guidebook.getting_started.head.name": "Crafting your first toolhead!",
   "book.forgero.guidebook.getting_started.head.description": "Getting further a-head",
-  "book.forgero.guidebook.getting_started.head.text": "The type of [#](5100FF)Toolhead[#]() you use decides which tool it is gonna be. So a axehead makes a axe, and a pickaxehead a pickaxe.",
+  "book.forgero.guidebook.getting_started.head.text": "The type of [#](5100FF)Toolhead[#]() you use decides which tool it is gonna be. \n\\\n\\\nSo a axehead makes a axe, and a pickaxehead a pickaxe.",
   "book.forgero.guidebook.getting_started.head.title": "Your First Toolhead",
   "book.forgero.guidebook.getting_started.your_first_tool.name": "Your First Tool!",
   "book.forgero.guidebook.getting_started.your_first_tool.description": "Putting the pieces together",
